feat: add endpoints for fetching roles
